[package]

name = "rustecspong"
version = "0.0.1"
authors = ["Jake Kerr <kodafox@gmail.com>"]

[[bin]]

name = "rustecspong"

[dependencies.input]
git = "https://github.com/pistondevelopers/input"

[dependencies.event]
git = "https://github.com/pistondevelopers/event"

[dependencies.shader_version]
git = "https://github.com/pistondevelopers/shader_version"

[dependencies.sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.rustecs]
git = "https://github.com/hannobraun/rustecs"

[dependencies.nphysics]
git = "https://github.com/sebcrozet/nphysics"
features = ["2df64"]
