[package]
authors = ["Jake Kerr <kodafox@gmail.com>"]
name = "rustecspong"
version = "0.0.1"

[dependencies]
ecs = "*"
piston = "0.16.0"
piston2d-graphics = "0.12.0"
piston2d-opengl_graphics = "0.21.0"
pistoncore-sdl2_window = "0.22.0"
rand = "0.3.3"
shader_version = "0.2.1"
vecmath = "0.2.0"

[[bin]]
name = "rustecspong"
path = "src/game.rs"
